# judgement-ai

./: .gitignore  AGENT.md  LICENSE  PIPELINE.md  README.md  judgement-ai.yaml.example  pyproject.toml  validation.local.yaml  validation.reference.yaml.example
.github/workflows/: ci.yml
docs/: AGENT.md  PIPELINE.md  amazon-benchmark.md  configuration.md  prompt-research.md  structured-output-checks.md  validation-runbook.md
examples/: README.md  custom_prompt_template.txt  elasticsearch_example.py  in_memory_example.py  ollama-config.yaml  ollama_example.py  openai-config.yaml  prefetched_example.py  queries.txt  results.json
judgement_ai/: __init__.py  cli.py  config.py  fetcher.py  grader.py  models.py  output.py  progress.py  prompts.py  results_io.py  resume.py  validation.py  validation_prep.py
judgement_ai/cli/: __init__.py  common.py  main.py
judgement_ai/cli/commands/: export_csv.py  grade.py  preview.py
judgement_ai/grading/: __init__.py  parsing.py  providers.py  service.py  types.py
tests/: test_cli.py  test_config.py  test_examples.py  test_fetcher.py  test_grader.py  test_output.py  test_prepare_benchmarks.py  test_prepare_subsets.py  test_progress.py  test_prompts.py  test_resume.py  test_run_validation_entrypoint.py  test_validation.py  test_validation_prep.py
validate/: __init__.py  download_amazon_esci.py  prepare_amazon_product_search.py  prepare_subsets.py  prepare_trec_dl_passage.py  prepare_trec_product_search.py  results.json  run_validation.py
validate/datasets/: smoke.json  trec_product_search.json
validate/provenance/: amazon_product_search.md  trec_dl_passage.md  trec_product_search.md
validate/published/trec_dl_passage/: summary.json
validate/published/trec_product_search/: summary.json
