[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "judgement-ai"
version = "0.1.0"
description = "Python library and CLI for automated AI-powered judgment scoring."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "judgement-ai contributors" }
]
keywords = ["search", "evaluation", "grading", "llm", "ranking", "judgments"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "click>=8.1.7",
  "pyyaml>=6.0.1",
  "requests>=2.32.3",
]

[project.urls]
Homepage = "https://github.com/MclPio/judgement-ai"
Repository = "https://github.com/MclPio/judgement-ai"
Issues = "https://github.com/MclPio/judgement-ai/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "pytest-cov>=5.0.0",
  "ruff>=0.11.2",
]
validate = [
  "pandas>=2.2.3",
  "pyarrow>=17.0.0",
]

[project.scripts]
judgement-ai = "judgement_ai.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["judgement_ai*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
